<resources>
    <string name="app_name">QRExpireCheck</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="start_date">Start Date</string>
    <string name="expired_date">Expired Date</string>
    <string name="qr_scan">QR Scan</string>
    <string name="camera_rationale">We need camera permission to continue</string>
    <string name="result">Result</string>
    <string name="qr_code_invalid">Qr code invalid</string>
    <string name="enter_name_of_food">Enter name of food</string>
    <string name="save">Save</string>
    <string name="add_folder">Add Folder</string>
    <string name="enter_new_folder_id">Enter new folder Id</string>
    <string name="enter_new_folder_name">Enter new folder name</string>
    <string name="this_id_already_exists">This id already exists</string>
    <string name="notification_desc">Expiration soon, please check</string>
    <string name="alarm_fail">This food is expired - date expired : %s</string>
</resources>