<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:background="@color/pink_pastel"
        android:gravity="center"
        android:text="@string/add_folder"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:padding="16dp"
        android:src="@drawable/ic_white_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <EditText
        android:id="@+id/edtId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_folder_id"
        android:textColor="@color/black"
        android:textColorHint="@color/blackOpacity50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvErrorId"
        style="@style/BasicText"
        android:text="@string/this_id_already_exists"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtId"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_folder_name"
        android:textColor="@color/black"
        android:textColorHint="@color/blackOpacity50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvErrorId" />

    <TextView
        android:id="@+id/tvAdd"
        style="@style/BasicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_pink_10r"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />
</androidx.constraintlayout.widget.ConstraintLayout>
